Fixed some bugs in the IAccessibleText::get_text method affecting spinners

Bug: 730965
Change-Id: I0819a7e053f665ae5150147fd90b5dcab6ca0994
R=aleventhal@chromium.org, dmazzoni@chromium.org
Tested; manually